[gd_scene load_steps=5 format=3 uid="uid://dkjk6hxa6xtb3"]

[ext_resource type="Script" path="res://scripts/options.gd" id="1_86rf5"]
[ext_resource type="Texture2D" uid="uid://b072u1eoey5a2" path="res://textures/MAINPAGE_OPTIONS.png" id="2_07hc4"]
[ext_resource type="Texture2D" uid="uid://dyydf05lafpbv" path="res://textures/buttons/BUTTONS_SAVECHANGES.png" id="3_ii8i0"]
[ext_resource type="Texture2D" uid="uid://co2qfee1ppo7n" path="res://textures/buttons/BUTTONS_SAVECHANGES_HOVER.png" id="4_d0vhr"]

[node name="options" type="Control"]
z_index = 3
layout_mode = 3
anchors_preset = 0
offset_left = -474.0
offset_top = -75.0
offset_right = 678.0
offset_bottom = 573.0
scale = Vector2(4, 4.115)
pivot_offset = Vector2(581.79, 292.5)
script = ExtResource("1_86rf5")

[node name="BackGround" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -21.9075
offset_top = -98.8731
offset_right = 2026.09
offset_bottom = 1053.13
scale = Vector2(0.594, 0.578)
mouse_filter = 2
texture = ExtResource("2_07hc4")

[node name="Heading" type="RichTextLabel" parent="."]
visible = false
layout_mode = 0
offset_left = 445.0
offset_top = 59.0
offset_right = 673.0
offset_bottom = 97.0
bbcode_enabled = true
text = "[center]OPTIONS[/center]
"

[node name="Options List" type="VBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 432.0
offset_top = 200.0
offset_right = 582.0
offset_bottom = 332.0

[node name="RichTextLabel" type="RichTextLabel" parent="Options List"]
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
bbcode_enabled = true
text = "SFX"

[node name="RichTextLabel2" type="RichTextLabel" parent="Options List"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
bbcode_enabled = true
text = "Background Music
"

[node name="RichTextLabel3" type="RichTextLabel" parent="Options List"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
bbcode_enabled = true
text = "Volume
"

[node name="RichTextLabel4" type="RichTextLabel" parent="Options List"]
visible = false
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
bbcode_enabled = true
text = "TBD"

[node name="Controls" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 650.592
offset_top = 118.0
offset_right = 750.592
offset_bottom = 277.0

[node name="SFXButton" type="CheckButton" parent="Controls"]
process_mode = 3
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Control" type="Control" parent="Controls"]
process_mode = 3
custom_minimum_size = Vector2(0, 18)
layout_mode = 2

[node name="BGButton" type="CheckButton" parent="Controls"]
process_mode = 3
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Control2" type="Control" parent="Controls"]
process_mode = 3
custom_minimum_size = Vector2(0, 18)
layout_mode = 2

[node name="VolumeSlider" type="HSlider" parent="Controls"]
process_mode = 3
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="SaveChangesButton" type="TextureButton" parent="."]
process_mode = 3
layout_mode = 0
offset_left = 484.0
offset_top = 356.0
offset_right = 1508.0
offset_bottom = 868.0
scale = Vector2(0.13, 0.15)
texture_normal = ExtResource("3_ii8i0")
texture_hover = ExtResource("4_d0vhr")

[connection signal="pressed" from="Controls/SFXButton" to="." method="_on_sfx_button_pressed"]
[connection signal="pressed" from="Controls/BGButton" to="." method="_on_bg_button_pressed"]
[connection signal="value_changed" from="Controls/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="pressed" from="SaveChangesButton" to="." method="_on_done_button_pressed"]
